* 0.19.6
  - don't spam info messages when republish fails

  - pool the republish Vec

  - the browser should take the configured default_auth into account

* 0.19.5
  - fix a bug in subscriber that could cause the last messages from
    a disconnected publisher to be lost

  - browser force new netidx version

  - add a command line tool to query the recorder's oneshot facility

* 0.19.4
  - fix a bug in subscriber that caused voluntary shutdowns
    to add the ip to the recently failed list.

* 0.19.3
  - fix a bug in PREFER_LOCAL that could prevent subscribing

* 0.19.2
  - implement new publish flag FORCE_LOCAL, which overrides USE_EXISTING
    but is otherwise the same as PREFER_LOCAL.

* 0.19.1
  - fix a bug in PREFER_LOCAL

  - introduce a new replay mode in the recorder "oneshot" that lets
    you just call an rpc with a time range and get data.

* 0.19.0
  - fix PublisherBuilder to be more ergonomic, sorry for the churn

  - add a parameter `slack` that together with the flush timeout can
    be used to properly manage the slow client problem.

* 0.18.3
  - add new publish flag PREFER_LOCAL, which will cause subscribers to
    try addresses in the following order.
    - 1st addresses that are on the local computer
    - 2nd addresses that are on the same subnet as the local computer
    - 3rd all other addresses
  
  - swap out get_if_addrs crate for the maintained if-addrs crate

* 0.18.1-2
  - add features to BindCfg for NAT traversal. You can now run publishers 
    and resolver servers behind a NAT and DNAT forward the port.

  - Fix a bug in TLS, sometimes (rarely) it is required to call flush on
    tls wrapped sockets, because they are after all buffer io. Oops. Thank
    you weird aws nat thing for helping to find this bug :-)

  - 0.18.2 just removes some dbg statements I left in. Sorry!

  - browser sort table rows and columns by their numeric value if they parse
    as integers.
