@@ -1,6 +1,6 @@
 [package]
 name = "netidx-tools"
-version = "0.19.5"
+version = "0.19.6"
 authors = ["Eric Stokes <letaris@gmail.com>"]
 edition = "2021"
 license = "MIT"
